--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8411,3 +8411,36 @@ body {
   cursor: pointer;
 }
 
+/* Topic Index Page */
+
+.topics-index-page .topic-list .nav > li > a {
+  position: relative;
+  display: block;
+  padding: 5px 14px;
+  font-size: 0.9em;
+}
+
+.topics-index-page .topic-list a {
+  color: #444444;
+}
+
+.topics-index-page .topic-list .meta {
+  font-size: 0.9em;
+  color: #b3b3b3;
+}
+
+.topics-index-page .topic-list .meta a {
+  color: #b3b3b3;
+}
+
+.topics-index-page .topic-list .badge {
+  background-color: #d8d8d8;
+}
+
+.topics-index-page .topic-list hr {
+  margin-top: 12px;
+  margin-bottom: 12px;
+  border: 0;
+  border-top: 1px solid #dcebf5;
+}
+
